@@ -1,3 +1,8 @@
+25 May 2021: Wouter
+	- Move the NSEC3 max iterations count in line with the 150 value
+	  used by BIND, Knot and PowerDNS. This sets the default value
+	  for it in the configuration to 150 for all key sizes.
+
 21 May 2021: Wouter
 	- Test code has -q option for quiet output.
 
